--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>An information factor: what are skilled investors buying and selling?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">20 minutes ago</div>
+                        <div class="date">45 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 14.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -332,7 +332,7 @@
                     <div class="video-info">
                         <h3>Backtesting: Does It REALLY Matter for Trading Bots? #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -343,7 +343,7 @@
                     <div class="video-info">
                         <h3>Let's Cook! 👨🏼‍🍳 Strategy Build November 2025 🚀</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>Trading Slippage: Gold Market's Shocking $2,900 Loss! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>An information factor: what are skilled investors buying and selling?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">20 minutes ago</div>
+                            <div class="date">45 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 14.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5182,7 +5182,7 @@
                         <div class="video-info">
                             <h3>Backtesting: Does It REALLY Matter for Trading Bots? #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5193,7 +5193,7 @@
                         <div class="video-info">
                             <h3>Let's Cook! 👨🏼‍🍳 Strategy Build November 2025 🚀</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5347,7 +5347,7 @@
                         <div class="video-info">
                             <h3>Trading Slippage: Gold Market's Shocking $2,900 Loss! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN CATEGORIES: ALPHABET EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
