--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>An information factor: what are skilled investors buying and selling?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">45 minutes ago</div>
+                        <div class="date">59 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>MIT Hosts Sadhguru for Nanobiosym Global Summit 2025</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Do this setup key for a natural, "un-technical" golf swing.</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">17 hours ago</div>
+                        <div class="date">18 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Cauvery Calling’s Impact - Read the Caption for Details</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                         <div class="channel">Peak Trading Research</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -321,7 +321,7 @@
                     <div class="video-info">
                         <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -1964,7 +1964,7 @@
                     <div class="video-info">
                         <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">2 weeks ago</div>
+                        <div class="date">3 weeks ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>An information factor: what are skilled investors buying and selling?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">45 minutes ago</div>
+                            <div class="date">59 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -5138,7 +5138,7 @@
                         <div class="video-info">
                             <h3>Cattle Consolidation 🐂 | Strategy of the Month November 2025 🚀</h3>
                             <div class="channel">Peak Trading Research</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5171,7 +5171,7 @@
                         <div class="video-info">
                             <h3>Daytrading (Real Money) Live Account | 100% Automated Expert Advisor Forex Trading</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -5956,7 +5956,7 @@
                         <div class="video-info">
                             <h3>AI Bot Backtest: Real Money Performance vs. Estimates #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">2 weeks ago</div>
+                            <div class="date">3 weeks ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>MIT Hosts Sadhguru for Nanobiosym Global Summit 2025</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Cauvery Calling’s Impact - Read the Caption for Details</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>Do this setup key for a natural, "un-technical" golf swing.</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">17 hours ago</div>
+                            <div class="date">18 hours ago</div>
                         </div>
                     </a>
                 </div>
