--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Trading Research: Why Slippage & Commission Matter #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>An information factor: what are skilled investors buying and selling?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">1 hours ago</div>
+                        <div class="date">2 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Releasing the Root of Inner Stress</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Is automated trading REALLY better?</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">5 hours ago</div>
+                        <div class="date">6 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 14.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">6 hours ago</div>
+                        <div class="date">7 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>[REAL ACCOUNT] Lost 8,000 in one Week Trading... (XAUUSD, USDJPY, US30...)</h3>
                         <div class="channel">René Balke - Fx Bot Trading</div>
-                        <div class="date">8 hours ago</div>
+                        <div class="date">9 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>How to End Stress and Anxiety | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Algo Trading Tips: Backtesting Secrets Revealed! #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -2283,7 +2283,7 @@
                     <div class="video-info">
                         <h3>Nihilism: The belief in nothing</h3>
                         <div class="channel">Einzelgänger</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 15, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Trading Research: Why Slippage & Commission Matter #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>An information factor: what are skilled investors buying and selling?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">1 hours ago</div>
+                            <div class="date">2 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>Is automated trading REALLY better?</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">5 hours ago</div>
+                            <div class="date">6 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 14.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">6 hours ago</div>
+                            <div class="date">7 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5127,7 +5127,7 @@
                         <div class="video-info">
                             <h3>[REAL ACCOUNT] Lost 8,000 in one Week Trading... (XAUUSD, USDJPY, US30...)</h3>
                             <div class="channel">René Balke - Fx Bot Trading</div>
-                            <div class="date">8 hours ago</div>
+                            <div class="date">9 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5138,7 +5138,7 @@
                         <div class="video-info">
                             <h3>Algo Trading Tips: Backtesting Secrets Revealed! #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Releasing the Root of Inner Stress</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7260,7 +7260,7 @@
                         <div class="video-info">
                             <h3>How to End Stress and Anxiety | Eckhart Tolle on Peace, Presence and Inner Freedom (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7799,7 +7799,7 @@
                         <div class="video-info">
                             <h3>Nihilism: The belief in nothing</h3>
                             <div class="channel">Einzelgänger</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 15, 2025</div>
                         </div>
                     </a>
                 </div>
